# ProcessingModules

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gtest/: gtest_filter_custom_addmultipledron.cc  gtest_filter_custom_addmultipledron.h  gtest_filter_custom_velocityfilter.cc  gtest_filter_custom_velocityfilter.h  gtest_filter_custom_viterbi.cc  gtest_filter_custom_viterbi.h  gtest_filter_median_impl_2.cc  gtest_filter_median_impl_2.h
gtest_it/: gtest_filter_custom_viterbi.cc  test_graph.json  test_graph_config.json
include/: block.h  processing.h  processing_global.h
src/: block.cc  processing.cc
src/Adder/: adder.cc  adder.h
src/Adder/adders/: opencv_absdiff.cc  opencv_add.cc
src/Compare/: compare.cc  compare.h  comparelist.h
src/Compare/compares/: basecompare.cc  basecompare.h  custom_none.cc  custom_none.h  vot_challenge.cc  vot_challenge.h  votcpp_challenge.cc  votcpp_challenge.h
src/Example/: case.cc  case.h  main.cc  mainloop.cc  mainloop.h  structures.h
src/Filter/: filter.cc  filter.h  filterlist.h
src/Filter/filters/: basefilter.cc  basefilter.h  custom_adddron.cc  custom_adddron.h  custom_adddron_impl.cc  custom_adddron_impl.h  custom_addgaussiannoise.cc  custom_addgaussiannoise.h  custom_addmultipledron.cc  custom_addmultipledron.h  custom_addmultipledronblurred.cc  custom_addmultipledronblurred.h  custom_none.cc  custom_velocityfilter.cc  custom_velocityfilter.h  custom_viterbi.cc  custom_viterbi.h  custom_viterbifilter.cc  custom_viterbifilter.h  custom_viterbiglobal.cc  opencv_bilateralfilter.cc  opencv_bitwisenot.cc  opencv_bitwisenot.h  opencv_blur.cc  opencv_canny.cc  opencv_color.cc  opencv_findcontours.cc  opencv_findcontours.h  opencv_gaussianblur.cc  opencv_inrange.cc  opencv_inrange.h  opencv_morphologyoperation.cc  opencv_regionofinterest.cc  opencv_resize.cc  opencv_sobel.cc
src/Filter/filters/viterbi/: velocityfilter_impl.cc  velocityfilter_impl.h  viterbi.cc  viterbi.h  viterbifilter_impl.cc  viterbifilter_impl.h  viterbiglobal_impl.cc
src/Subtractor/: subtractor.cc  subtractor.h  subtractorlist.h
src/Subtractor/subtractors/: bgslibrary_abl.cc  bgslibrary_asbl.cc  bgslibrary_lobster.cc  bgslibrary_lobster.h  bgslibrary_vibe.cc  bgslibrary_vibe.h  bgslibrary_weightedmovingmean.cc  bgslibrary_weightedmovingvariance.cc  custom_median.cc  custom_median_implementation.cc  custom_median_implementation.h  custom_median_implementation_2.cc  custom_median_implementation_2.h  custom_none.cc  custom_pbas.cc  custom_pbas.h  custom_vibe.cc  custom_vibe.h  opencv_cnt.cc  opencv_cnt.h  opencv_gmg.cc  opencv_gmg.h  opencv_gsoc.cc  opencv_gsoc.h  opencv_knn.cc  opencv_knn.h  opencv_lsbp.cc  opencv_lsbp.h  opencv_mog.cc  opencv_mog.h  opencv_mog2.cc  opencv_mog2.h
src/Subtractor/subtractors/LBSP/: BackgroundSubtractorLOBSTER.h
src/Subtractor/subtractors/PBAS_0.1/: LICENSE.txt  PBAS.cc  PBAS.h  readme.txt
src/Subtractor/subtractors/ViBe/: vibe-background-sequential.cc  vibe-background-sequential.h
src/Test/: test.cc
src/Tracker/: tracker.cc  tracker.h  trackerlist.h
src/Tracker/trackers/: basetracker.cc  basetracker.h  custom_none.cc  custom_none.h  opencv_trackers.cc  opencv_trackers.h
